# interactive_draw_mcp

./: .gitignore  README.md  main.py  pyproject.toml
src/interactive_draw_mcp/: __init__.py  __main__.py  board_state.json  server.py
src/interactive_draw_mcp/ui/: __init__.py
